force-app/main/default/objects/aig_AI_Use_Case_Risk__c/aig_AI_Use_Case_Risk__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Risk</label>
    <nameField>
        <displayFormat>RSK-{0000000}</displayFormat>
        <label>Risk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>