force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Acceptable_Risk__c.field-meta.xml
<CustomField>
    <fullName>aig_Acceptable_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceptable Risk</label>
    <type>Checkbox</type>
</CustomField>