force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_AI_Risk_Packet_Question__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Risk_Packet_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Risk Packet Question</label>
    <referenceTo>aig_AI_Risk_Packet_Question__c</referenceTo>
    <relationshipLabel>AI Use Case Risks</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>