force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Category__c.field-meta.xml
<CustomField>
    <fullName>aig_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Data and Information</fullName>
            </value>
            <value>
                <fullName>Human AI Interaction</fullName>
            </value>
            <value>
                <fullName>Dangerous or Violent Recommendations</fullName>
            </value>
            <value>
                <fullName>Emerging Risks</fullName>
            </value>
            <value>
                <fullName>Unknown/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>