force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Compliance_Checklist_Question_Resp__c.field-meta.xml
<CustomField>
    <fullName>aig_Compliance_Checklist_Question_Resp__c</fullName>
    <label>Compliance Checklist Question Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>