force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>aig_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker</label>
    <referenceTo>aig_AI_Use_Case_Stakeholder__c</referenceTo>
    <relationshipLabel>AI Use Case Risks</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>