force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Description__c.field-meta.xml
<CustomField>
    <fullName>aig_Description__c</fullName>
    <inlineHelpText>A detailed explanation of the potential harm or negative outcome associated with the identified risk.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>