force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_From_Compliance_Checklist__c.field-meta.xml
<CustomField>
    <fullName>aig_From_Compliance_Checklist__c</fullName>
    <formula>NOT(ISBLANK( aig_AI_Compliance_Checklist_Question__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Compliance Checklist</label>
    <type>Checkbox</type>
</CustomField>