force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_From_Risk_Packet__c.field-meta.xml
<CustomField>
    <fullName>aig_From_Risk_Packet__c</fullName>
    <formula>NOT(ISBLANK( aig_AI_Risk_Packet_Question__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Risk Packet</label>
    <type>Checkbox</type>
</CustomField>