force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Mitigation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>aig_Mitigation_Strategy__c</fullName>
    <inlineHelpText>A description of actions or measures that can be taken to reduce the likelihood or impact of the risk. This could include technical controls, policy changes, or user education.</inlineHelpText>
    <label>Mitigation Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>