force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Risk__c.field-meta.xml
<CustomField>
    <fullName>aig_Risk__c</fullName>
    <label>Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>