force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>aig_Risk_Level__c</fullName>
    <formula>IF(aig_Risk_Score__c &lt; 1,
     &quot;NOT ASSESSED&quot;,
IF(
    aig_Risk_Score__c &lt;= 5,
    &quot;🟢 LOW&quot;,
    IF(
        aig_Risk_Score__c &lt;= 15,
        &quot;🟡 MODERATE&quot;,
        &quot;🔴 HIGH&quot;
    )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>