force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Risk_Packet_Question_Response__c.field-meta.xml
<CustomField>
    <fullName>aig_Risk_Packet_Question_Response__c</fullName>
    <label>Risk Packet Question Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>