force-app/main/default/objects/aig_AI_Use_Case_Risk__c/fields/aig_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>aig_Risk_Score__c</fullName>
    <formula>CASE(
    TEXT(aig_Impact__c),
    &quot;Very Low&quot;, 1,
    &quot;Low&quot;, 2,
    &quot;Moderate&quot;, 3,
    &quot;High&quot;, 4,
    &quot;Very High&quot;, 5,
    0
) *
CASE(
    TEXT(aig_Likelihood__c),
    &quot;Very Unlikely&quot;, 1,
    &quot;Unlikely&quot;, 2,
    &quot;Possible&quot;, 3,
    &quot;Likely&quot;, 4,
    &quot;Very Likely&quot;, 5,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>